--- a/app/src/main/res/layout/notes_item.xml
+++ b/app/src/main/res/layout/notes_item.xml
@@ -37,10 +37,9 @@
 
             <ImageView
                 android:id="@+id/imageViewLock"
-                android:layout_width="55dp"
-                android:layout_height="50dp"
-                android:layout_alignParentStart="true"
-                android:layout_marginStart="338dp"
+                android:layout_width="45dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
                 android:src="@drawable/lock" />
 
         </RelativeLayout>
